--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,15 +26,10 @@ jobs:
         id: vars
         run: echo "SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
 
-      - name: 🔍 Debug secrets (only shows if non-empty)
-        run: |
-          echo "DOCKERHUB_USERNAME is set? -> ${DOCKERHUB_USERNAME:+yes}"
-          echo "DOCKERHUB_TOKEN is set? -> ${DOCKERHUB_TOKEN:+yes}"
-
       - name: 🏗️ Build & Push Auth Service
         uses: docker/build-push-action@v6
         with:
-          context: ./EProject-Phase/auth
+          context: ./auth
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/auth-service:latest
@@ -43,7 +38,7 @@ jobs:
       - name: 📦 Build & Push Product Service
         uses: docker/build-push-action@v6
         with:
-          context: ./EProject-Phase/product
+          context: ./product
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/product-service:latest
@@ -52,7 +47,7 @@ jobs:
       - name: 🛒 Build & Push Order Service
         uses: docker/build-push-action@v6
         with:
-          context: ./EProject-Phase/order
+          context: ./order
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/order-service:latest
@@ -61,7 +56,7 @@ jobs:
       - name: 🌐 Build & Push API Gateway
         uses: docker/build-push-action@v6
         with:
-          context: ./EProject-Phase/api-gateway
+          context: ./api-gateway
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/api-gateway:latest
